--- a/backend/.classpath
+++ b/backend/.classpath
@@ -37,5 +37,6 @@
 	<classpathentry kind="lib" path="lib/commons-exec-1.1.jar" sourcepath="lib/commons-exec-1.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar" sourcepath="lib/commons-lang3-3.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/postgresql-9.2-1002.jdbc4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-dbcp-1.4.jar" sourcepath="lib/commons-dbcp-1.4-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
