--- a/backend/.classpath
+++ b/backend/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar" sourcepath="lib/commons-lang3-3.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/postgresql-9.2-1002.jdbc4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-dbcp-1.4.jar" sourcepath="lib/commons-dbcp-1.4-sources.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool-1.6.jar" sourcepath="lib/commons-pool-1.6-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
