--- a/geomelody/geomelody/geomelody-Info.plist
+++ b/geomelody/geomelody/geomelody-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>de.mad.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>de.lmu.geomelody</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
