--- a/backend/build.xml
+++ b/backend/build.xml
@@ -37,7 +37,7 @@
 	<target name="compile">
 		<delete dir="${classdir.dir}" />
 		<mkdir dir="build/classes" />
-		<javac srcdir="src" destdir="build/classes" classpathref="classpath" />
+		<javac debug="true" debuglevel="lines,vars,source" srcdir="src" destdir="build/classes" classpathref="classpath" />
 	</target>
 	<target name="jar" depends="clean,compile">
 		<mkdir dir="${jar.dir}" />
