--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "PPRevealSideViewController"]
 	path = PPRevealSideViewController
 	url = git://github.com/ipup/PPRevealSideViewController.git
+[submodule "calloutview"]
+	path = calloutview
+	url = https://github.com/nfarina/calloutview.git
